--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <h1>Password Generator</h1>
+    <div class="container">
+      <label for="length">Length:</label>
+      <input type="number" id="length" min="6" max="128" value="6" />
+      <label for="symbols">Include Symbols:</label>
+      <input type="checkbox" id="symbols" />
+      <label for="lowercase">Include Lowercase Characters:</label>
+      <input type="checkbox" id="lowercase" />
+      <label for="uppercase">Include Uppercase Characters:</label>
+      <input type="checkbox" id="uppercase" />
+      <button id="generate">Generate</button>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
