Create Output Field

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <button id="generate">Generate</button>
     </div>
 
+    <div class="container-password">
+      <label for="output"> Your Password: </label>
+      <input type="text" id="output" />
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
