--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <input type="checkbox" id="lowercase" />
       <label for="uppercase">Include Uppercase Characters:</label>
       <input type="checkbox" id="uppercase" />
+      <label for="numbers">Include Numbers:</label>
+      <input type="checkbox" id="numbers" />
       <button id="generate">Generate</button>
     </div>
 
