--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container-password">
       <label for="output"> Your Password: </label>
-      <input type="text" id="output" />
+      <input type="text" id="password" />
     </div>
 
     <script src="index.js"></script>
