--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="input-container">
         <label for="length">Length:</label>
-        <input type="number" id="length" min="6" max="128" value="6" />
+        <input type="number" id="length" min="6" max="128" value="12" />
       </div>
       <div class="input-container">
         <label for="symbols">Include Symbols:</label>
@@ -36,6 +36,7 @@
     <div class="container-password">
       <label for="output"> Your Password: </label>
       <input type="text" id="password" />
+      <button id="copy">Copy Text</button>
     </div>
 
     <script src="index.js"></script>
